--- a/API/DocketSystemAPI/DocketSystemAPI/appsettings.Development.json
+++ b/API/DocketSystemAPI/DocketSystemAPI/appsettings.Development.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DocketSystemConnection": "Data Source=.;Initial Catalog=DocketSystem;Integrated Security=True;Connect Timeout=30;"
   }
 }
