--- a/UI/TADHACK/package.json
+++ b/UI/TADHACK/package.json
@@ -30,6 +30,7 @@
         "core-js": "^2.5.5",
         "font-awesome": "^4.7.0",
         "ng2-charts": "^1.6.0",
+        "ng6-toastr-notifications": "^1.0.4",
         "rxjs": "^6.1.0",
         "yarn": "^1.6.0",
         "zone.js": "^0.8.26"
