sms service working

--- a/API/DocketSystemAPI/DocketSystemAPI/appsettings.Development.json
+++ b/API/DocketSystemAPI/DocketSystemAPI/appsettings.Development.json
@@ -8,5 +8,8 @@
   },
   "ConnectionStrings": {
     "DocketSystemConnection": "Data Source=.;Initial Catalog=DocketSystem;Integrated Security=True;Connect Timeout=30;"
+  },
+  "VOIPAuthentication": {
+    "Base_Url": "https://api4.apidaze.io/9fae5ff1/sms/send?api_secret=f806067e220ca7563a664476f00f3552"
   }
 }
