--- a/API/DocketSystemAPI/DocketSystemAPI/DocketSystemAPI.csproj
+++ b/API/DocketSystemAPI/DocketSystemAPI/DocketSystemAPI.csproj
@@ -5,11 +5,25 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="parlayx-sms-send-service-2-2-soapui-project.xml" />
+  </ItemGroup>
 
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="RestSharp" Version="106.5.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="2.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="System.ServiceModel.Primitives" Version="4.5.3" />
+    <PackageReference Include="System.ServiceModel.Duplex" Version="4.5.0" />
+    <PackageReference Include="System.ServiceModel.Http" Version="4.5.0" />
+    <PackageReference Include="System.ServiceModel.NetTcp" Version="4.5.0" />
+    <PackageReference Include="System.ServiceModel.Security" Version="4.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Connected Services\" />
   </ItemGroup>
 </Project>
