--- a/API/DocketSystemAPI/DocketSystemAPI/DocketSystemAPI.csproj
+++ b/API/DocketSystemAPI/DocketSystemAPI/DocketSystemAPI.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
 
     <PackageReference Include="Microsoft.AspNetCore.App" />
+
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Cors" Version="2.1.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="2.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
