--- a/API/DocketSystemAPI/DocketSystemAPI/Properties/launchSettings.json
+++ b/API/DocketSystemAPI/DocketSystemAPI/Properties/launchSettings.json
@@ -3,14 +3,15 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:50202",
-      "sslPort": 44323
+      "applicationUrl": "http://192.168.20.132:5001",
+      "sslPort": 5001
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -22,7 +23,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "http://192.168.20.132:5001",
+      "sslPort": 5001
     }
   }
 }
