--- a/API/DocketSystemAPI/DocketSystemAPI/appsettings.Development.json
+++ b/API/DocketSystemAPI/DocketSystemAPI/appsettings.Development.json
@@ -9,5 +9,7 @@
   "ConnectionStrings": {
     "DocketSystemConnection": "Data Source=.;Initial Catalog=DocketSystem;Integrated Security=True;Connect Timeout=30;"
   },
-  "MTNWSDLEndpoint": "http://196.11.240.224:8310/SendSmsService/services/SendSms"
+  "VOIPAuthentication": {
+    "Base_Url": "https://api4.apidaze.io/9fae5ff1/sms/send?api_secret=f806067e220ca7563a664476f00f3552"
+  }
 }
