--- a/API/DocketSystemAPI/DocketSystemAPI/Properties/launchSettings.json
+++ b/API/DocketSystemAPI/DocketSystemAPI/Properties/launchSettings.json
@@ -3,10 +3,11 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://192.168.20.132:5001",
-      "sslPort": 5001
+      "applicationUrl": "http://localhost:50202",
+      "sslPort": 44323
     }
   },
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
@@ -23,8 +24,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://192.168.20.132:5001",
-      "sslPort": 5001
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
