--- a/API/DocketSystemAPI/DocketSystemAPI/appsettings.Development.json
+++ b/API/DocketSystemAPI/DocketSystemAPI/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DocketSystemConnection": "Data Source=.;Initial Catalog=DocketSystem;Integrated Security=True;Connect Timeout=30;"
+    "DocketSystemConnection": "Data Source=http://192.168.20.132:5001;Initial Catalog=DocketSystem;Integrated Security=True;Connect Timeout=30;"
   },
   "VOIPAuthentication": {
     "Base_Url": "https://api4.apidaze.io/9fae5ff1/sms/send?api_secret=f806067e220ca7563a664476f00f3552"
