--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /UI/TADHACK/.vs
+/API/DocketSystemAPI/DocketSystemUI/Properties
