--- a/API/DocketSystemAPI/DocketSystemAPI/Properties/launchSettings.json
+++ b/API/DocketSystemAPI/DocketSystemAPI/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:50202",
+      "applicationUrl": "http://192.168.20.132:50202",
       "sslPort": 44323
     }
   },
@@ -24,7 +24,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "http://192.168.20.132:5000"
     }
   }
 }
